--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "styled-components": "^3.2.6",
-    "webpack": "^4.6.0"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.14"
   }
 }
